# saple-bridge

./: .claudeignore  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  HANDOFF.md  Package.appxmanifest  README.md  auditor_report.md  eslint.config.js  handoff.md  improvement-1.md  index.html  left-to-implement.md  package-lock.json  package.json  plan.md  security-audit-report.md  skills-lock.json  swarm-redesign.md  swarm-update-new.html  swarm-update-new.md  update1.md  update11.html  update11.md  vite.config.js  vite.config.ts
.agents/: AGENTS.md
.claude/: skills-lock.json
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
all-other-files/: agent-orchestration-architecture-analysis.html  agent-orchestration-architecture-analysis.md  agent-orchestration-architecture.html  agent-orchestration-architecture.md  improvement-1.html  plan.md  saple-bridge-architecture.html  saplebridge vs canvas.html  saplebridge vs canvas.md  swarm-redesign.html  swarm-update-1.md  update1.md
docs/: agent-orchestration-plan.md  explain.html  explain.md  swarm-cross-provider-orchestration.html  swarm-cross-provider-orchestration.md
e2e/: README.md  package.json  paths.ts  tsconfig.json  wdio.conf.ts
e2e/specs/: smoke.e2e.ts
public/: theme-init.js
scripts/: pack-msix.mjs  prepare-sidecar.mjs  release.mjs  tauri.mjs
smoke-test-workspace/: README.md
src/: AGENTS.md  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  browser.rs  claude_context.rs  control_plane.rs  diagnostics.rs  files.rs  fs_lock.rs  git.rs  june_control.rs  keychain.rs  lib.rs  main.rs  mcp.rs  memory.rs  models.rs  process_ext.rs  project.rs  pty.rs  review.rs  swarm.rs  watcher.rs
src-tauri/src/amber/: anthropic.rs  builtins.rs  claude_code.rs  mod.rs  openai.rs  persist.rs  provider.rs  sse.rs  tools.rs  types.rs
src/components/: AGENTS.md
src/components/amber/: AGENTS.md  AmberComposer.tsx  AmberMessage.tsx  AmberMessageList.tsx  AmberSettings.tsx  AmberToolCall.tsx  AmberWorkspace.tsx
src/components/browser/: BrowserPanel.tsx
src/components/common/: CommandPalette.tsx  ConfirmDialog.tsx  KeyboardShortcutsDialog.tsx  ModelCombobox.tsx  RoomSkeleton.tsx  ShortcutsHelpDialog.tsx  ThemeToggle.tsx  ToastHost.tsx
src/components/editor/: CodeMirrorEditor.tsx  CodeViewer.tsx  EditorPanel.tsx  EditorTabs.tsx  MarkdownPreview.tsx
src/components/files/: FileSearchPanel.tsx  FileTree.tsx  FilesPanel.tsx
src/components/kanban/: KanbanBoard.tsx  KanbanColumn.tsx  TaskCard.tsx  TaskDetailDrawer.tsx  TaskDialog.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/memory/: MemoryEditor.tsx  MemoryGraph.tsx  MemoryList.tsx  MemoryWorkspace.tsx
src/components/memory/markdown/: MemoryMarkdown.tsx  remarkWikilinks.ts
src/components/preview/: PreviewPanel.tsx
src/components/project/: ProjectDashboard.tsx  ProjectSettings.tsx
src/components/project/settings/: DiagnosticsTab.tsx  KeychainTab.tsx  McpTab.tsx  MemoryTab.tsx  ProvidersTab.tsx  SessionsTab.tsx  SshPresetsSection.tsx  UpdatesSection.tsx  WorkspaceTab.tsx  constants.ts
src/components/review/: ReviewActionsPanel.tsx  ReviewFileList.tsx  ReviewWorkspace.tsx  SplitDiffViewer.tsx  VirtualizedTextViewer.tsx
src/components/swarm/: ElapsedTime.tsx  SwarmAgentCard.tsx  SwarmComposer.tsx  SwarmGraph.tsx  SwarmTemplateEditor.tsx  SwarmWorkspace.tsx
src/components/swarm/wizard/: SwarmWizard.tsx  constants.ts  providerMeta.ts  skills.ts  wizardStyles.ts
src/components/swarm/wizard/steps/: ContextStep.tsx  DirectoryStep.tsx  LaunchStep.tsx  MissionStep.tsx  NameStep.tsx  RosterStep.tsx
src/components/terminal/: TerminalContextMenu.tsx  TerminalGrid.tsx  TerminalPane.tsx  TerminalPaneContextMenu.tsx  TerminalPaneTitlebar.tsx  TerminalSearchBar.tsx  terminalClipboard.test.ts  terminalClipboard.ts  terminalFileDrop.test.ts  terminalFileDrop.ts  terminalLayout.test.ts  terminalLayout.ts  terminalThemes.ts  useXtermSession.ts  webLinks.test.ts  webLinks.ts  webglBudget.ts
src/lib/: agentSignals.test.ts  agentSignals.ts  claudeContext.test.ts  claudeContext.ts  clipboard.test.ts  clipboard.ts  contextBrief.test.ts  contextBrief.ts  controlPlane.test.ts  controlPlane.ts  date.ts  desktopNotifications.ts  diffSplit.test.ts  diffSplit.ts  errors.ts  highlighter.ts  id.test.ts  id.ts  juneDispatcher.ts  loopback.test.ts  loopback.ts  sshPreset.test.ts  sshPreset.ts  swarmDigest.test.ts  swarmDigest.ts  swarmEvents.test.ts  swarmEvents.ts  swarmPlan.test.ts  swarmPlan.ts  swarmPrompts.ts  swarmStatus.test.ts  swarmStatus.ts  taskAgentPrompt.ts  terminalLimits.ts  useFocusTrap.ts  writeQueue.test.ts  writeQueue.ts
src/stores/: agentSessionStore.test.ts  agentSessionStore.ts  amberStore.ts  browserStore.test.ts  browserStore.ts  confirmStore.ts  fileLayoutStore.ts  fileStore.test.ts  fileStore.ts  kanbanStore.test.ts  kanbanStore.ts  memoryStore.test.ts  memoryStore.ts  modelCatalogStore.test.ts  modelCatalogStore.ts  notificationStore.test.ts  notificationStore.ts  projectStore.test.ts  projectStore.ts  providerStore.ts  reviewStore.ts  shortcutsHelpStore.ts  sshPresetStore.ts  swarmStore.test.ts  swarmStore.ts  terminalFontStore.ts  terminalLayoutStore.ts  terminalStore.test.ts  terminalStore.ts  themeStore.ts  workspacePaneLayoutStore.ts
src/styles/: browser.css  common.css  index.css  kanban.css  layout.css  memory.css  preview.css  review.css  settings.css  swarm.css  terminal.css  tokens.css
src/types/: agent.ts  provider.test.ts  provider.ts  review.ts  swarmPlan.ts  task.ts  wizard.ts
