[package]
name = "saple-bridge"
version = "1.0.13"
description = "Saple Bridge — local-first agentic development workspace"
authors = ["Saple"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "saple_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15.0"
keyring = "2.1"
which = "6"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
# Persist window size/position/maximized across launches.
tauri-plugin-window-state = "2"
trash = "5.2.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Opening the app again focuses the existing window instead of starting a second process.
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
# PTY process-tree cleanup: each shell is placed in a Job Object so closing a pane kills the
# AI CLI (and its children), not just powershell.exe. See `proc_tree` in src/pty.rs.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }


