[package]
name = "saple-bridge"
version = "1.0.25"
description = "Saple Bridge — local-first agentic development workspace"
authors = ["Saple"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Microsoft Store (MSIX) build: the Store owns updates, so the self-updater is compiled out
# (see lib.rs). Set by scripts/pack-msix.mjs via `tauri build -- --features ms-store`.
ms-store = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "saple_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15.0"
keyring = "2.1"
which = "6"
# Filesystem walker shared with ripgrep: respects .gitignore/.ignore, prunes VCS/build dirs, and
# walks in parallel. Backs the file tree and workspace search (see `files.rs`).
ignore = "0.4"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
# Persist window size/position/maximized across launches.
tauri-plugin-window-state = "2"
# In-app updates: `check()` fetches the signed release feed and applies the NSIS update; the
# process plugin provides the `relaunch()` that restarts into the new version. Updater artifact
# signing (and the `plugins.updater` feed config) are release-only — see tauri.release.conf.json.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
trash = "5.2.6"
# Watch the open project's .saple state files so external writers (the saple-mcp sidecar,
# agents) can't be silently clobbered by a stale in-memory save. The mini debouncer coalesces
# the event bursts a temp-file+rename produces. See src/watcher.rs.
notify-debouncer-mini = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Opening the app again focuses the existing window instead of starting a second process.
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
# PTY process-tree cleanup: each shell is placed in a Job Object so closing a pane kills the
# AI CLI (and its children), not just powershell.exe. See `proc_tree` in src/pty.rs.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# Release binary tuning. Defaults (16 codegen units, no LTO, unstripped) leave real
# performance and installer size on the table for the hot Rust paths this app leans on:
# PTY output streaming, the recursive memory-graph walk, and file search. LTO + a single
# codegen unit let the optimizer inline across modules; `strip` drops debug symbols from
# the shipped binary; `panic = "abort"` removes unwinding tables (a panic in a PTY/keychain
# worker aborts the process rather than unwinding across the FFI boundary anyway). Cost is a
# slower release build, which only runs at packaging time.
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true


